--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
-    "sass": "^1.72.0"
+    "sass": "^1.72.0",
+    "@rollup/rollup-linux-x64-gnu": "^4.9.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
